youtubeからshareした場合、View読み込み時のテキスト設定値をURLとする

--- a/Favs/Info.plist
+++ b/Favs/Info.plist
@@ -30,9 +30,9 @@
 	<key>UILaunchScreen</key>
 	<dict>
 		<key>UIColorName</key>
-		<string>launchScreenBackground</string>
+		<string>LaunchScreenBackground</string>
 		<key>UIImageName</key>
-		<string>launchScreenImage</string>
+		<string>LaunchScreenImage</string>
 	</dict>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
