--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -2,6 +2,7 @@
   "name": "functions",
   "scripts": {
     "build": "tsc",
+    "build:watch": "tsc --watch",
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
@@ -9,19 +10,17 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "12"
+    "node": "16"
   },
   "main": "lib/index.js",
   "dependencies": {
-    "@types/nodemailer": "^6.4.0",
-    "cors": "^2.8.5",
-    "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0",
-    "nodemailer": "^6.4.18"
+    "@types/nodemailer": "^6.4.6",
+    "firebase-admin": "^10.2.0",
+    "firebase-functions": "^3.21.0",
+    "nodemailer": "^6.7.8"
   },
   "devDependencies": {
-    "firebase-functions-test": "^0.2.0",
-    "typescript": "^3.8.0"
+    "typescript": "^4.6.4"
   },
   "private": true
 }
